#VERSION 0.8.7#

 - added passing by reference to __get() method in Peak_View

 - modified method Peak_Controller_Internal_PkError::_exception2table()

 - optimized Peak_Core::initConfig() by removing copy of configs array  

 - added passing by reference to __get() method in Peak_Config
 
 - simplified Peak_Exception, added class Peak_Controller_Exception and Peak_View_Exception and modified many classes accordingly

 - modified method Peak_Controller_Front::errorDispath() to return Peak_Application instance

 - fixed method Peak_Application::_construct() due to missing keywork "new" before Peak_Controller_Front object

 - added View helper js

#VERSION 0.8.6#

 - added params to method helper() in Peak_View

 - fixed problem with $params in method Peak_Controller_Front::redirect() and modified method Peak_Router::setRequest() accordingly

 - corrected method name _filter_length() in Peak_Filters_Advanced

 - added method model() in Peak_Controller_Action

 - added method _globalSanitizeRecursive() in Peak_Filters and modified globalSanitize() to support multidimensionnal array

 - added method _filterRecursive() in Peak_Controller_Helper_Post to support multidimensionnal post sanitization

 - added class Peak_Model_Zendatable

 - fixed _filter_float() constant name error in Peak_Filters_Advanced

 - added filter text to Peak_Filters_Advanced

 - added method Peak_Core::init() to emulate boot.php process step by step

 - minor fix to class name in file Peak/Filters/Data.php

 - added method redirectAction() in Peak_Controller_Action

 - added method _filter_float and fixed _filter_alpha to support french chars in Peak_Filters_Advanced

 - moved front controller postDispath() call to Peak_Application::run()

 - resolved paths in boot.php with realpath()

 - fixed Peak_Codegen_Bootstrap because we have renamed bootstrap class

 - moved code from Peak_Core_Extension_Modules to Peak_Application_Modules and deleted modules core extensions
