@@ -105,7 +105,15 @@ class Peak_View
         if(method_exists($this->engine(),$method)) {
         	return call_user_func_array(array($this->engine(), $method), $args);        
         }
-        elseif((isset($this->helper()->$method)) || ($this->helper()->exists($method))) return $this->helper()->$method;
+        elseif((isset($this->helper()->$method)) || ($this->helper()->exists($method))) {
+            if(!empty($args)) {
+                $helper = $method;
+                $method = $args[0]; 
+                $args = array_slice($args,1);
+                return call_user_func_array(array($this->helper()->$helper, $method), $args);
+            }
+            return $this->helper()->$method;
+        }
         elseif(defined('APPLICATION_ENV') && in_array(APPLICATION_ENV, array('development', 'testing'))) {
             trigger_error('View method/helper '.$method.'() doesn\'t exists');
         }
